# lambda-classification-summarization-recman-test-assignment

./: LICENSE  README.md  main.py  pyproject.toml  run_local.py  ts.md
app/: run.py
data/: input_data.json
infra/: app.py
infra/stacks/: mvp_stack.py
src/: classification.py  handler.py  llm.py  models.py  schemas.py  settings.py
